<?xml version="1.0"?>
<package format="3">
  <name>astra_camera</name>
  <version>1.2.7</version>
  <description>Drivers for Orbbec Astra Devices (ROS 2 Humble Port)</description>
  <license>Apache License 2.0</license>
  <maintainer email="mocun@orbbec.com">Mo Cun</maintainer>

  <!-- 构建工具链 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- 核心依赖项 -->
  <depend>backward_ros</depend>
  <depend>libdw-dev</depend>
  <depend>cv_bridge</depend>
  <depend>rclcpp_components</depend>
  <depend>git</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>libudev-dev</depend>
  <depend>libusb-1.0-dev</depend>
  <depend>rgbd_launch</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>message_filters</depend>
  <depend>camera_info_manager</depend>
  <depend>opencv</depend>

  <!-- ROS2接口系统 -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
